<resources>
    <string name="app_name" translatable="false">App Lock</string>
    <string name="mobile_ad_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="full_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="policy_url" translatable="false">YOUR_PRIVACY_URL_HERE</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="tab_a_z" translatable="false">A - Z</string>
    <string name="notification_protecting_title">Protecting your apps</string>
    <string name="notification_protecting_description">Lock your apps to protect your privacy.</string>
    <string name="title_theme">Theme</string>
    <string name="text_SECURED">SECURED</string>
    <string name="setting_fingerprint_title">Enable fingerprint</string>
    <string name="setting_fingerprint_description">Launch app with your fingerprint.</string>
    <string name="setting_fingerprint_not_supported_title">Fingerprint is not supported</string>
    <string name="setting_fingerprint_not_supported_description">Your device doesn\'t have a sensor</string>
    <string name="setting_fingerprint_not_registered_title">Please register your fingerprint!</string>
    <string name="setting_fingerprint_not_registered_description">Go to security settings</string>
    <string name="pattern_draw_your_unlock_pattern">Draw your unlock pattern</string>
    <string name="pattern_draw_your_unlock_current_pattern">Draw your current unlock pattern</string>
    <string name="pattern_confirm_your_pattern">Confirm your pattern</string>
    <string name="redraw_pattern_title">Draw pattern again to confirm</string>
    <string name="pattern_connect_at_least_4_dots">Connect at least 4 dots</string>
    <string name="create_pattern_completed">Completed!</string>
    <string name="recreate_pattern_error">Patterns do not match. Please Redraw!</string>
    <string name="create_pattern_successful">Successfully created</string>
    <string name="overlay_prompt_pattern_title">Draw pattern to open app</string>
    <string name="overlay_prompt_pattern_title_wrong">Wrong pattern. Please draw again.</string>
    <string name="overlay_prompt_fingerprint_title_wrong">Fingerprint not match</string>
    <string name="overlay_prompt_fingerprint_title_error">Fingerprint error! Please try again.</string>
    <string name="dialog_action_privacy_policy_accept">Accept</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_audio_library">Audio library</string>
    <string name="title_file_library">File library</string>
    <string name="title_photo_empty_page">No private image</string>
    <string name="title_video_empty_page">No private video</string>
    <string name="title_audio_empty_page">Empty audios</string>
    <string name="title_file_empty_page">Empty files</string>
    <string name="title_intruders_photos">Intruder selfie</string>
    <string name="msg_empty_page_intruders_title">All intruder\'s photos will appear here</string>
    <string name="tabs_vault_images">Images</string>
    <string name="tabs_vault_videos">Videos</string>
    <string name="tabs_vault_audios">Audios</string>
    <string name="tabs_vault_files">Files</string>
    <string name="tab_locked">Locked</string>
    <string name="tab_private">Private</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_open">Open</string>
    <string name="menu_move_out">Move out</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_deactivate">Deactivate</string>
    <string name="menu_activate">Activate</string>
    <string name="menu_save_to_gallery">Save to gallery</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_customize_time">Customize lock time</string>
    <string name="txt_ok">OK</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_check">Check</string>
    <string name="txt_skip">Skip</string>
    <string name="msg_please_choose_at_least_one">Please choose at least one</string>
    <string name="tab_pattern">Pattern</string>
    <string name="tab_keypad">Keypad</string>
    <string name="tab_wallpaper">Wallpaper</string>
    <string name="txt_apply">Apply</string>
    <string name="title_set_lock_wallpaper">Set lock wallpaper</string>
    <string name="title_confirm">Confirm</string>
    <string name="msg_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="msg_change_lock_wallpaper_succeed">Changed lock wallpaper successfully</string>
    <string name="msg_theme_has_been_changed">Theme has been changed</string>
    <string name="msg_images_unlock">Are you sure you want to unlock all selected pictures to the storage?</string>
    <string name="msg_videos_unlock">Are you sure you want to unlock all selected videos to the storage?</string>
    <string name="msg_audios_unlock">Are you sure you want to unlock all selected audios to the storage?</string>
    <string name="msg_files_unlock">Are you sure you want to unlock all selected files to the storage?</string>
    <string name="msg_images_unlock1">Are you sure you want to unlock selected pictures to the storage?</string>
    <string name="msg_videos_unlock1">Are you sure you want to unlock selected videos to the storage?</string>
    <string name="msg_audios_unlock1">Are you sure you want to unlock selected audios to the storage?</string>
    <string name="msg_files_unlock1">Are you sure you want to unlock selected files to the storage?</string>
    <string name="msg_images_delete">The photo will be completely deleted and cannot be recovered.</string>
    <string name="msg_videos_delete">The video will be completely deleted and cannot be recovered.</string>
    <string name="msg_audios_delete">The audio will be completely deleted and cannot be recovered.</string>
    <string name="msg_files_delete">The file will be completely deleted and cannot be recovered.</string>
    <string name="msg_delete_failed">File deletion failed.</string>
    <string name="msg_denied_permission">If you reject the permission, you cannot use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="msg_pin_lock_confirm">Please re-enter your password</string>
    <string name="msg_pin_lock_current_password">Please enter your current password</string>
    <string name="msg_pin_lock_error">Confirmation password is incorrect</string>
    <string name="msg_pin_lock_error_login">Passwords do not match, please try again</string>
    <string name="msg_pin_lock_set_your_pin_code">Set your PIN code</string>
    <string name="msg_pin_lock_enter_numbers">Enter 4–6 numbers</string>
    <string name="msg_pin_lock_confirm_your_pin">Confirm your PIN</string>
    <string name="msg_pin_lock_wrong_pin_code">Wrong PIN code</string>
    <string name="msg_password_has_been_changed">Password has been changed</string>
    <string name="text_file_size">Size:</string>
    <string name="text_resolution">Resolution:</string>
    <string name="text_last_modified">Last modified:</string>
    <string name="text_duration">Duration:</string>
    <string name="text_name">Name:</string>
    <string name="title_move_in">Move In</string>
    <string name="title_move_out">Move Out</string>
    <string name="msg_move_in">Are you sure you want to move this item to the archive?</string>
    <string name="msg_move_out">Are you sure you want to move this item out of the archive?</string>
    <string name="title_operation_successful">Operation succeeded</string>
    <string name="text_save">Save</string>
    <string name="text_save_and_active">Save and active</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_go_to_setting">Go to Setting</string>
    <string name="text_deny">Deny</string>
    <string name="text_allow">Allow</string>
    <string name="text_no_cancel">No</string>
    <string name="text_yes_do_it">Yes</string>
    <string name="text_ok_lock_it">OK, Lock it</string>
    <string name="text_open_app">Open App</string>
    <string name="msg_intruder_record">Take a picture after 3 times wrong</string>
    <string name="msg_delete_image_intruder">Are you sure you want to delete the photos?</string>
    <string name="msg_delete_group_lock">Are you sure you want to delete this group?</string>
    <string name="msg_picture_has_been_saved_to_gallery">Picture has been saved to the gallery!</string>
    <string name="title_intruder_photo_dialog">Intruder detection</string>
    <string name="msg_intruder_photo_dialog">Somebody is trying to intrude into your phone</string>
    <string name="title_settings_activate_fingerprint">Activate fingerprint</string>
    <string name="title_settings_theme">Theme</string>
    <string name="title_settings_change_password">Change password</string>
    <string name="title_settings_capture_the_intruder">Intruder selfie</string>
    <string name="title_settings_lock_screen">Lock screen</string>
    <string name="title_settings_prevent_uninstall">Prevent uninstalling</string>
    <string name="title_settings_locking_new_application">Ask for locking new application</string>
    <string name="title_settings_privacy_policy">Privacy Policy</string>
    <string name="title_settings_rate_application">Rate application</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="hint_enter_name_group_lock">Enter name group lock</string>
    <string name="text_invalid_email_address">Invalid email address</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_show_path_line">Show path line</string>
    <string name="splash_policy">By proceeding, you agree to the</string>
    <string name="text_warning">Warning</string>
    <string name="msg_failed_more_password">Too many incorrect attempts. Please try again later.</string>
    <string name="msg_failed_more_fingerprint">Try your fingerprint again in 30 seconds.</string>
    <string name="msg_forgot_password">Forgot password?</string>
    <string name="msg_fingerprint_no_match">Fingerprints do not match</string>
    <string name="msg_prevent_application_uninstall">Hackers will be able to uninstall the application</string>
    <string name="msg_activate_group_lock">Do you want to activate?</string>
    <string name="msg_deactivate_group_lock">Do you want to deactivate?</string>
    <string name="msg_successfully_activated">Activated successfully</string>
    <string name="msg_successfully_deactivated">Deactivated successfully</string>
    <string name="hint_search">Search</string>
    <string name="msg_group_lock_name_cannot_be_empty">Group lock name cannot be empty</string>
    <string name="msg_create_group_lock_successfully">Created a new group lock successfully</string>
    <string name="msg_create_group_lock_failed">New group lock creating failed</string>
    <string name="msg_update_group_lock_successfully">Updated group lock successfully</string>
    <string name="title_warning_close_app">Do you want to leave the app ?</string>
    <string name="bottom_app_lock">App Lock</string>
    <string name="bottom_group_lock">Group Lock</string>
    <string name="bottom_settings">Settings</string>
    <string name="bottom_unlock">Unlock</string>
    <string name="bottom_detail">Detail</string>
    <string name="bottom_save">Save</string>
    <string name="bottom_share">Share</string>
    <string name="text_allow_write_access">Allow Media File Access</string>
    <string name="text_allows_applock_access_to_photos">Allows AppLock access to photos, media and files on your device?</string>
</resources>