<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup_menu"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llEdit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_edit"
            android:textColor="#263238"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRename"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvRename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/menu_rename"
            android:textColor="#263238"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCustomTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvCustomTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/menu_customize_time"
            android:textColor="#263238"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDelete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_delete"
            android:textColor="#263238"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llActivate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvActivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_activate"
            android:textColor="#263238"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDeactivate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvDeactivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_deactivate"
            android:textColor="#263238"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>