<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup_menu"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llPreview"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_preview"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSaveToGallery"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_save_to_gallery"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShare"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/bottom_share"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDelete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_delete"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>