<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_change_email"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="5dp"
        android:text="@string/title_warning_close_app"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"/>

    <FrameLayout
        android:id="@+id/frAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvNo"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_no"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvYes"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_yes"/>
    </LinearLayout>
</LinearLayout>