<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/width_menu_more_audio"
    android:background="@drawable/background_popup_menu"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llOpen"
        android:layout_weight="1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/menu_open"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1"/>

    <LinearLayout
        android:id="@+id/llDetail"
        android:layout_weight="1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_detail"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1"/>

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/llMoveOut"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_move_out"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1"/>

    <LinearLayout
        android:id="@+id/llDelete"
        android:layout_weight="1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/menu_delete"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>